--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tasket_db?useSSL=true&serverTimezone=UTC
-spring.datasource.username=firstuser
-spring.datasource.password=firstuser
+spring.datasource.username=root
+spring.datasource.password=root
 
 server.port=5000
