--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tasket_db?useSSL=true&serverTi
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jooq.sql-dialect=MySQL
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+
 server.port=5000
