--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Database settings
 spring.datasource.url=jdbc:mysql://localhost:3306/tasket_db?useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
@@ -6,5 +7,8 @@ spring.jooq.sql-dialect=MySQL
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-
+#Server settings
 server.port=5000
+
+#Application settings
+community.count.max = 10
